--- a/Readme
+++ b/Readme
@@ -1,1 +1,5 @@
 Hello Rust players, Random GitHub users, and More! 
+
+What is this? 
+
+This GitHub Repo is an easy way for Players to submit Suggestions, Questions, and Issues
