--- a/Readme
+++ b/Readme
@@ -1,5 +1,4 @@
 Hello Rust players, Random GitHub users, and More! 
 
-What is this? 
-
-This GitHub Repo is an easy way for Players to submit Suggestions, Questions, and Issues
+What is this? <b>and this is bold text</b>.</p>
+This GitHub Repo is an easy way for Players to submit Issues, Questions, And Suggestions 
