--- a/readme
+++ b/readme
@@ -1,3 +1,3 @@
-Hello Rust players, Random GitHub users, and More! 
+#Hello Rust players, Random GitHub users, and More!
 
 This GitHub Repo is an easy way for Players to submit Issues, Questions, And Suggestions 
